--- a/ollama-openwebui/ollama-openwebui.yaml
+++ b/ollama-openwebui/ollama-openwebui.yaml
@@ -22,6 +22,8 @@ spec:
         ai.sap.com/resourcePlan: infer.s
     spec: |
       predictor:
+        imagePullSecrets:
+        - name: kai-m
         minReplicas: 1
         maxReplicas: 1
         containers:
