--- a/ollama-openwebui/ollama-openwebui.yaml
+++ b/ollama-openwebui/ollama-openwebui.yaml
@@ -30,3 +30,6 @@ spec:
           ports:
             - containerPort: 8080
               protocol: TCP
+          env:
+            - name: WEBUI_SECRET_KEY
+              value: "abc-def"
